tests/core/snapshots/test-scalars-integers.md_7.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": 65535,
      "b": 4294967295
    }
  }
}
