tests/core/snapshots/test-scalars-integers.md_8.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid value for scalar \"UInt64\", expected \"FieldValue::Value\"",
        "locations": [
          {
            "line": 1,
            "column": 31
          }
        ],
        "path": [
          "b"
        ]
      }
    ]
  }
}
