tests/core/snapshots/test-scalars-validation.md_1.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid value for scalar \"Email\", expected \"FieldValue::Value\"",
        "locations": [
          {
            "line": 1,
            "column": 3
          }
        ],
        "path": [
          "emailOutput"
        ]
      }
    ]
  }
}
