tests/core/snapshots/test-scalars.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "email": "alo@valid.com"
    }
  }
}
