tests/core/snapshots/test-scalars.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "phone": "+1 (614) 1234567"
    }
  }
}
